# GifLoaderTest

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PthreadSleep.cpp  PthreadSleep.h  log.h  native-lib.cpp
app/src/main/java/com/lanshifu/gifloadertest/: FileUtil.java  GifHandler.java  MainActivity.java
app/src/main/java/com/lanshifu/gifloadertest/test/: JniTest.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lanshifu/gifloadertest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
